# SOD-Team-Assignment

./: .gitignore  README.md  operations.db  pyproject.toml
docs/: SRS.md  Technical_and_User_Documentation_Manual.md  Technical_and_User_Documentation_Manual_Template.md
src/mining_ois/: __init__.py  main.py
src/mining_ois/api/: routes.py
src/mining_ois/core/: __init__.py  models.py  services.py
src/mining_ois/db/: __init__.py  database.py
src/mining_ois/web/: index.html
src/mining_operations_ois.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_services.py
